<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="20dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_size_filter_label"
        android:id="@+id/tvSizeFilterLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/spinnerTypeFilter"
        android:layout_toStartOf="@+id/spinnerTypeFilter"
        android:layout_above="@+id/tvColorFilterLabel"
        android:gravity="center_vertical"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerSizeFilter"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvSizeFilterLabel"
        android:layout_toEndOf="@+id/tvSizeFilterLabel"
        android:spinnerMode="dropdown"
        android:prompt="@string/sizes_prompt"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_color_filter_label"
        android:id="@+id/tvColorFilterLabel"
        android:layout_below="@+id/spinnerSizeFilter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/spinnerSizeFilter"
        android:layout_toStartOf="@+id/spinnerSizeFilter"
        android:layout_above="@+id/tvImageTypeLabel"
        android:gravity="center_vertical"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerColorFilter"
        android:layout_below="@+id/spinnerSizeFilter"
        android:layout_alignLeft="@+id/spinnerSizeFilter"
        android:layout_alignStart="@+id/spinnerSizeFilter"
        android:spinnerMode="dropdown"
        android:prompt="@string/colors_prompt"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_type_filter_label"
        android:id="@+id/tvImageTypeLabel"
        android:layout_below="@+id/spinnerColorFilter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/tvFileTypeLabel"
        android:gravity="center_vertical"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerTypeFilter"
        android:layout_below="@+id/spinnerColorFilter"
        android:layout_toRightOf="@+id/tvImageTypeLabel"
        android:layout_toEndOf="@+id/tvImageTypeLabel"
        android:spinnerMode="dropdown"
        android:prompt="@string/types_prompt"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_file_type_filter_label"
        android:id="@+id/tvFileTypeLabel"
        android:layout_below="@+id/spinnerTypeFilter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/tvSiteFilterLabel"
        android:gravity="center_vertical"
        android:layout_toLeftOf="@+id/spinnerTypeFilter"
        android:layout_toStartOf="@+id/spinnerTypeFilter" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerFileTypeFilter"
        android:layout_below="@+id/spinnerTypeFilter"
        android:layout_toEndOf="@+id/tvImageTypeLabel"
        android:spinnerMode="dropdown"
        android:prompt="@string/file_types_prompt"
        android:layout_toRightOf="@+id/tvImageTypeLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_site_filter_label"
        android:id="@+id/tvSiteFilterLabel"
        android:layout_below="@+id/spinnerFileTypeFilter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/spinnerFileTypeFilter"
        android:layout_toStartOf="@+id/spinnerFileTypeFilter"
        android:layout_alignBottom="@+id/etSiteFilter"
        android:gravity="center_vertical"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etSiteFilter"
        android:layout_below="@+id/spinnerFileTypeFilter"
        android:layout_toRightOf="@+id/tvSiteFilterLabel"
        android:layout_toEndOf="@+id/tvSiteFilterLabel"
        android:hint="@string/et_site_filter_hint"
        android:singleLine="true"
        android:scrollHorizontally="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_safe_search_label"
        android:id="@+id/tvSafeSearchLabel"
        android:layout_below="@+id/tvSiteFilterLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/cbSafeSearch"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cbSafeSearch"
        android:layout_below="@+id/etSiteFilter"
        android:layout_toRightOf="@+id/tvSafeSearchLabel"
        android:layout_toEndOf="@+id/tvSafeSearchLabel"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvSafeSearchLabel"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_save_filters_text"
            android:id="@+id/btSaveFilters"
            android:layout_marginRight="40dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_cancel_filters_text"
            android:id="@+id/btCancel" />
    </LinearLayout>

</RelativeLayout>